# HW_20.2

./: catalog.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_is_published_blog_slug_blog_views_counter_and_more.py  0003_alter_blog_created_at.py
blog/templates/blog/: blog_form.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/: contacts.html  home.html  product_detail.html  products.html
catalog/templates/catalog/: catalog_detail.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
